# libabacus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: basetype.h  custom.h  debug.h  free_functions.h  function_list.h  gc.h  gc_functions.h  impl.h  interpreter.h  lexer.h  libabacus.h  libabacus_result.h  libabacus_util.h  number.h  parser.h  parsetype.h  ref_trie.h  ref_vec.h  refcount.h  refcount_internal.h  reserved.h  result.h  table.h  tree.h  trie.h  type.h  types.h  util.h  value.h
src/: GPATH  GRTAGS  GTAGS  basetype.c  custom.c  debug.c  free_functions.c  function_list.c  gc.c  interactive.c  interpreter.c  lexer.c  libabacus.c  libabacus_util.c  main.c  parser.c  parsetype.c  ref_trie.c  ref_vec.c  refcount.c  refcount_internal.c  reserved.c  table.c  tree.c  trie.c  type.c  types.c  util.c  value.c
